--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
+    "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
@@ -27,6 +28,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
+    "react-navigation-hooks": "^1.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-axios-middleware": "^4.0.1",
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/lodash": "^4.14.170",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "typescript": "~4.0.0"
